--- a/LoginAssigment/LoginAssigment/App.config
+++ b/LoginAssigment/LoginAssigment/App.config
@@ -1,6 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <section name="SqlUnitTesting" type="Microsoft.Data.Tools.Schema.Sql.UnitTesting.Configuration.SqlUnitTestingSection, Microsoft.Data.Tools.Schema.Sql.UnitTesting, Version=15.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  </configSections>
+  <SqlUnitTesting>
+    <DataGeneration ClearDatabase="true" />
+    <ExecutionContext Provider="System.Data.SqlClient" ConnectionString="Data Source=10.135.85.168;Persist Security Info=True;User ID=group6;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True"
+      CommandTimeout="30" />
+    <PrivilegedContext Provider="System.Data.SqlClient" ConnectionString="Data Source=10.135.85.168;Persist Security Info=True;User ID=group6;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True"
+      CommandTimeout="30" />
+  </SqlUnitTesting>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 </configuration>
