--- a/LoginAssigment/LoginAssigment/App.config
+++ b/LoginAssigment/LoginAssigment/App.config
@@ -3,6 +3,11 @@
   <configSections>
     <section name="SqlUnitTesting" type="Microsoft.Data.Tools.Schema.Sql.UnitTesting.Configuration.SqlUnitTestingSection, Microsoft.Data.Tools.Schema.Sql.UnitTesting, Version=15.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   </configSections>
+  <connectionStrings>
+    <add name="LoginAssigment.Properties.Settings.GROUP6ConnectionString"
+      connectionString="Data Source=10.135.85.168;Initial Catalog=GROUP6;Persist Security Info=True;User ID=group6;Password=Grp6313s"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <SqlUnitTesting>
     <DataGeneration ClearDatabase="true" />
     <ExecutionContext Provider="System.Data.SqlClient" ConnectionString="Data Source=10.135.85.168;Persist Security Info=True;User ID=group6;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True"
