--- a/LoginAssigment/LoginAssigment/LoginAssigment.csproj
+++ b/LoginAssigment/LoginAssigment/LoginAssigment.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="LoginForm.resx">
@@ -87,6 +88,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -117,6 +119,18 @@
       <HintPath>$(SSDTUnitTestPath)\Microsoft.Data.Tools.Schema.Sql.UnitTestingAdapter.dll</HintPath>
       <Private>True</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1a73745688319736fb8f61d203912941-blue-grey-orange-pie-chart-by-vexels.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\How-much-to-save-household-budget-pie-chart-percentages-general.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pie_chart_2.JPG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\image.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
